[package]
name = "gproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
pingora = { version = "0.8.1", features = ["proxy"] }
config = { version = "0.14", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
serde_json = "1.0"
bytes = "1.0"
